test/Fail/Issue2928.agda
record R : Set₂ where
  field
    f : Set₁

f : Set → R
f .R.f = Set
